--- a/YuLauncher/Core/Window/MainWindow.xaml
+++ b/YuLauncher/Core/Window/MainWindow.xaml
@@ -1,28 +1,42 @@
-﻿<Controls:MetroWindow x:Name="metowin"
-    Height="400"
+﻿<ui:FluentWindow x:Name="FluentWindow"
     Title="YuLancher"
-    Width="800"
     mc:Ignorable="d"
     x:Class="YuLauncher.Core.Window.MainWindow"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     xmlns:local="clr-namespace:YuLauncher"
     xmlns:properties="clr-namespace:YuLauncher.Properties"
-    xmlns:Controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    MinWidth="800" MinHeight="400" SizeToContent="WidthAndHeight" Closing="MetroWindow_Closing">
-    <Grid Height="400" MinWidth="800" MinHeight="400" ClipToBounds="True">
+    d:DesignHeight="400" d:DesignWidth="800" MinWidth="800" MinHeight="400"
+    xmlns:lex="http://wpflocalizeextension.codeplex.com"
+    lex:LocalizeDictionary.DesignCulture="ja-JP"
+    lex:ResxLocalizationProvider.DefaultAssembly="YuLauncher"
+    WindowStartupLocation="CenterScreen"
+    MouseDown="MainWindow_OnMouseDown"
+    lex:ResxLocalizationProvider.DefaultDictionary="LangString" Closing="MetroWindow_Closing">
+    <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="40"/>
+            <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Grid HorizontalAlignment="Stretch"
-                    VerticalAlignment="Stretch">
-         
+            <Grid  x:Name="Grid">
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+                        <ui:Button x:Name="BackBtn" Click="BackBtn_OnClick">
+                            <ui:FontIcon FontFamily="Segoe Fluent Icons" Glyph="&#xf0b0;" FontSize="20"/>
+                        </ui:Button>
+                   
+                    <ToggleButton x:Name="WindowStateBtn" VerticalAlignment="Center" Loaded="WindowStateBtn_OnLoaded" Checked="WindowStateBtn_OnChecked" Unchecked="WindowStateBtn_OnUnchecked">
+                        <ui:FontIcon x:Name="WindowStateIcon" FontFamily="Segoe Fluent Icons" FontSize="20"/>
+                    </ToggleButton>
+                    <ui:Button x:Name="ExitBtn" VerticalAlignment="Center" Panel.ZIndex="1" Click="ExitBtn_OnClick">
+                    <ui:FontIcon FontFamily="Segoe Fluent Icons" Glyph="&#xf78a;" FontSize="20"/>
+                </ui:Button>
+                    </StackPanel>
+        </Grid>
+            <Grid Grid.Row="1" Margin="0,5">
             <Frame Source="Pages/MainPage.xaml" NavigationUIVisibility="Hidden"></Frame>
-           
-            </Grid>
+        </Grid>
     </Grid>
-
-
-</Controls:MetroWindow>
+</ui:FluentWindow>
