--- a/YuLauncher/Core/Window/Pages/MainPage.xaml
+++ b/YuLauncher/Core/Window/Pages/MainPage.xaml
@@ -1,66 +1,57 @@
 ﻿<Page
-    d:DesignHeight="{Binding Source={x:Static properties:Settings.Default}, Path=Window_H}"
-    d:DesignWidth="{Binding Source={x:Static properties:Settings.Default}, Path=Window_W}"
-    mc:Ignorable="d"
     x:Class="YuLauncher.Core.Window.Pages.MainPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:properties="clr-namespace:YuLauncher.Properties"
-    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+    xmlns:lex="http://wpflocalizeextension.codeplex.com"
+    lex:LocalizeDictionary.DesignCulture="ja-JP"
+    lex:ResxLocalizationProvider.DefaultAssembly="YuLauncher"
+    lex:ResxLocalizationProvider.DefaultDictionary="Language"
+    mc:Ignorable="d">
     <Grid>
-        <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
-            <ColumnDefinition/>
-        </Grid.ColumnDefinitions>
-        <Grid.RowDefinitions>
-            <RowDefinition Height="30" />
-            <RowDefinition Height="30" />
-            <RowDefinition Height="30" />
-            <RowDefinition Height="30" />
-            <RowDefinition Height="30" />
-            <RowDefinition />
-        </Grid.RowDefinitions>
-        <Grid Grid.Row="0" Grid.ColumnSpan="2">
-            <Button
-                Click="StartBTN_Click"
-                Content="ゲーム一覧(R18)"
-                Grid.Column="0"
-                Style="{StaticResource MahApps.Styles.Button.Square.Accent}"
-                x:Name="StartBTN"/>
-        </Grid>
-        <Grid Grid.Row="1" Grid.ColumnSpan="2">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition />
-            </Grid.ColumnDefinitions>
-
-
-            <Button
-                Click="SettingBTN_OnClick"
-                Content="設定"
-                Grid.Column="0"
-                Style="{StaticResource MahApps.Styles.Button.Square.Accent}"
-                x:Name="SettingBTN" />
-        </Grid>
-        <Grid Grid.Row="2" Grid.ColumnSpan="2">
-            <Button
-                Click="LoginHistoryBTN_OnClick"
-                Content="ログイン履歴"
-                Style="{StaticResource MahApps.Styles.Button.Square.Accent}" />
-        </Grid>
-        <Grid Grid.Row="4" Grid.Column="0">
-            <Label x:Name="LatestLogin" />
-        </Grid>
-        <Grid Grid.Row="4" Grid.Column="1">
-            <Label x:Name="TodaysLogin"/>
-        </Grid>
-
-        <Grid Grid.Row="3" Grid.ColumnSpan="2">
-            <Button
-                x:Name="Fav_GameList"
-                Click="Fav_GameList_OnClick"
-                Content="お気に入りゲーム"
-                Style="{StaticResource MahApps.Styles.Button.Square.Accent}" />
-        </Grid>
-        </Grid>
+        <StackPanel>
+            <ui:Button 
+                x:Name="GameListBtn"
+                Height="50"
+                HorizontalAlignment="Stretch"
+                Content="{lex:Loc GameList}"
+                Click="GameListBtn_OnClick"
+                />
+            
+            <ui:Button
+                x:Name="StartBtn"
+                Height="50"
+                HorizontalAlignment="Stretch"
+                Content="{lex:Loc GameList18}"/>
+            
+            <ui:Button
+                x:Name="LoginHistoryBtn"
+                Height="50"
+                HorizontalAlignment="Stretch"
+                Content="{lex:Loc LoginHistory}"/>
+            
+            <ui:Button
+                x:Name="FavGameList"
+                Height="50"
+                HorizontalAlignment="Stretch"
+                Content="{lex:Loc FavoriteGame}"/>
+            
+            <ui:Button
+                x:Name="SettingBtn"
+                Height="50"
+                HorizontalAlignment="Stretch"
+                Click="SettingBtn_OnClick"
+                Content="{lex:Loc SimpleSetting}"/>
+            
+            <ui:Button
+                x:Name="ExitBtn"
+                Height="50"
+                HorizontalAlignment="Stretch"
+                Content="{lex:Loc SimpleExit}"
+                Click="ExitBtn_OnClick"/>
+        </StackPanel>
+    </Grid>
 </Page>
