--- a/YuLauncher/Game/Window/GameWindowAssistant.xaml
+++ b/YuLauncher/Game/Window/GameWindowAssistant.xaml
@@ -1,4 +1,4 @@
-﻿<mah:MetroWindow x:Class="YuLauncher.Game.Window.GameWindowAssistant"
+﻿<Window x:Class="YuLauncher.Game.Window.GameWindowAssistant"
                       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -15,4 +15,4 @@
             />
         </DockPanel>
     </Grid>
-</mah:MetroWindow>
+</Window>
