--- a/YuLauncher/Core/Window/MainWindow.xaml
+++ b/YuLauncher/Core/Window/MainWindow.xaml
@@ -9,7 +9,7 @@
     xmlns:properties="clr-namespace:YuLauncher.Properties"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    d:DesignHeight="400" d:DesignWidth="800" MinWidth="800" MinHeight="400"
+    MinWidth="800" MinHeight="400"
     xmlns:lex="http://wpflocalizeextension.codeplex.com"
     lex:LocalizeDictionary.DesignCulture="ja-JP"
     lex:ResxLocalizationProvider.DefaultAssembly="YuLauncher"
