メモ機能の設定追加 追加設定: 解像度変更、フォントサイズ変更

--- a/YuLauncher/Core/Window/SettingWindow.xaml
+++ b/YuLauncher/Core/Window/SettingWindow.xaml
@@ -13,7 +13,7 @@
         MouseDown="SettingWindow_OnMouseDown"
         WindowStartupLocation="CenterScreen"
         
-        Title="SettingWindow" d:DesignHeight="450" d:DesignWidth="800">
+        Title="SettingWindow">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="40"/>
