--- a/YuLauncher/Core/Window/Pages/SettingPage.xaml
+++ b/YuLauncher/Core/Window/Pages/SettingPage.xaml
@@ -10,31 +10,51 @@
              lex:LocalizeDictionary.DesignCulture="ja-JP"
              lex:ResxLocalizationProvider.DefaultAssembly="YuLauncher"
              lex:ResxLocalizationProvider.DefaultDictionary="Language"
+             MinWidth="800" MinHeight="400"
              mc:Ignorable="d">
 
     <Grid>
+        <ScrollViewer>
         <StackPanel>
+            <ui:TextBlock Text="{lex:Loc SimpleRes}" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold"/>
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-            <ui:TextBlock Text="{lex:Loc SimpleFullScreen}" FontSize="18" VerticalAlignment="Top"/>
-            <CheckBox x:Name="FullSc" Margin="50,0" Content="ON/OFF" IsChecked="False" VerticalAlignment="Top" Loaded="FullSc_OnLoaded" Checked="FullSc_OnChecked" Unchecked="FullSc_OnUnchecked"/>
+            <ui:TextBlock Text="{lex:Loc SimpleFullScreen}" FontSize="15"/>
+            <CheckBox x:Name="FullSc" Content="ON/OFF" IsChecked="False" HorizontalAlignment="Right" VerticalAlignment="Stretch" Loaded="FullSc_OnLoaded" Checked="FullSc_OnChecked" Unchecked="FullSc_OnUnchecked"/>
             </StackPanel>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0, 10">
+            
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <ui:TextBlock Text="{lex:Loc SettingResChange}" Height="30" FontSize="15"/>
-                <ui:TextBox x:Name="TxtResWidth" HorizontalAlignment="Stretch" Text=""/>
-                <ui:TextBox x:Name="TxtResHeight" HorizontalAlignment="Stretch" Text=""/>
-                <ui:TextBlock Text="{lex:Loc MainWindowResChange}" Height="30" FontSize="15"/>
-                <ui:TextBox x:Name="MenuTxtResWidth" HorizontalAlignment="Stretch" Text=""/>
-                <ui:TextBox x:Name="MenuTxtResHeight" HorizontalAlignment="Stretch" Text=""/>
-                <ui:TextBlock Text="{lex:Loc GameWindowResChange}" Height="30" FontSize="15"/>
-                <ui:TextBox x:Name="GameTxtResWidth" HorizontalAlignment="Stretch" Text=""/>
-                <ui:TextBox x:Name="GameTxtResHeight" HorizontalAlignment="Stretch" Text=""/>
+                <ui:TextBox x:Name="TxtResWidth" HorizontalAlignment="Right" Text=""/>
+                <ui:TextBox x:Name="TxtResHeight" HorizontalAlignment="Right" Text=""/>
             </StackPanel>
-            <ui:TextBlock Text="{lex:Loc SimpleLanguage}" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" Loaded="FrameworkElement_OnLoaded"/>
+            
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <ui:TextBlock Text="{lex:Loc MainWindowResChange}" Height="30" FontSize="15"/>
+                <ui:TextBox x:Name="MenuTxtResWidth" HorizontalAlignment="Center" Text=""/>
+                <ui:TextBox x:Name="MenuTxtResHeight" HorizontalAlignment="Center" Text=""/>
+            </StackPanel>
+            
+                <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <ui:TextBlock Text="{lex:Loc GameWindowResChange}" Height="30" FontSize="15"/>
+                <ui:TextBox x:Name="GameTxtResWidth" HorizontalAlignment="Center" Text=""/>
+                <ui:TextBox x:Name="GameTxtResHeight" HorizontalAlignment="Center" Text=""/>
+            </StackPanel>
+            
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                <ui:TextBlock Text="{lex:Loc MemoWindowResChange}" Height="30" FontSize="15"/>
+                <ui:TextBox x:Name="MemoTxtResWidth" HorizontalAlignment="Center" Text=""/>
+                <ui:TextBox x:Name="MemoTxtResHeight" HorizontalAlignment="Center" Text=""/>
+                <ui:TextBlock Text="{lex:Loc SimpleFontSize}" Height="30" FontSize="15"/>
+                <ui:TextBox x:Name="MemoTxtFontSize" HorizontalAlignment="Center" Text=""/>
+            </StackPanel>
+            
+                <ui:TextBlock Text="{lex:Loc SimpleLanguage}" HorizontalAlignment="Center" FontSize="20" FontWeight="Bold" Loaded="FrameworkElement_OnLoaded"/>
             <ComboBox x:Name="LanguageCombo">
                 <ComboBoxItem x:Name="EngItemCombo" Content="{lex:Loc SimpleEnglish}"/>
                 <ComboBoxItem x:Name="JpnItemCombo" Content="{lex:Loc SimpleJapanese}"/>
             </ComboBox>
-            <ui:Button x:Name="SaveBtn" Content="{lex:Loc SimpleSave}" HorizontalAlignment="Stretch" Click="SaveBtn_OnClick"/>
-        </StackPanel>
+            </StackPanel>
+         </ScrollViewer>
+        <ui:Button x:Name="SaveBtn" Content="{lex:Loc SimpleSave}" VerticalAlignment="Bottom" HorizontalAlignment="Stretch" Click="SaveBtn_OnClick"/>
         </Grid>
 </Page>
