--- a/YuLauncher/Core/Window/SettingWindow.xaml
+++ b/YuLauncher/Core/Window/SettingWindow.xaml
@@ -12,6 +12,7 @@
         lex:ResxLocalizationProvider.DefaultDictionary="LangString"
         MouseDown="SettingWindow_OnMouseDown"
         WindowStartupLocation="CenterScreen"
+        SizeChanged="SettingWindow_OnSizeChanged"
         
         Title="SettingWindow">
     <Grid>
@@ -20,9 +21,14 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid x:Name="Grid">
-            <ui:Button x:Name="ExitBtn" DockPanel.Dock="Top" HorizontalAlignment="Right" VerticalAlignment="Top" Panel.ZIndex="1" Click="ExitBtn_OnClick">
-                <ui:FontIcon FontFamily="Segoe Fluent Icons" Glyph="&#xf78a;" FontSize="30"/>
+            <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
+            <ToggleButton x:Name="WindowStateBtn" VerticalAlignment="Center" Checked="WindowStateBtn_OnChecked" Unchecked="WindowStateBtn_OnUnchecked" IsChecked="False">
+                <ui:FontIcon x:Name="WindowStateIcon" FontFamily="Segoe Fluent Icons" FontSize="20"/>
+            </ToggleButton>
+            <ui:Button x:Name="ExitBtn" Click="ExitBtn_OnClick">
+                <ui:FontIcon FontFamily="Segoe Fluent Icons" Glyph="&#xf78a;" FontSize="20"/>
             </ui:Button>
+                </StackPanel>
         </Grid>
         <Grid Grid.Row="1" Margin="0,5">
             <Frame Source="Pages/SettingPage.xaml" NavigationUIVisibility="Hidden"></Frame>
