--- a/YuLauncher/Core/Window/MemoWindow.xaml
+++ b/YuLauncher/Core/Window/MemoWindow.xaml
@@ -19,7 +19,7 @@
             <RowDefinition Height="40"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Grid Grid.Row="0">
+        <Grid x:Name="Grid" Grid.Row="0">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                 <ToggleButton x:Name="ModeButton" Content="{lex:Loc EditModeButton}" Checked="ModeButton_OnChecked" Unchecked="ModeButton_OnUnchecked"/>
                 <ui:Button x:Name="ExitBtn" VerticalAlignment="Center" Panel.ZIndex="1" Click="ExitBtn_OnClick">
