--- a/YuLauncher/Game/Window/GameWindow.xaml
+++ b/YuLauncher/Game/Window/GameWindow.xaml
@@ -1,27 +1,46 @@
-﻿<Window x:Name="GameWindow1" x:Class="YuLauncher.Game.Window.GameWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:YuLauncher.Game.Window"
-        mc:Ignorable="d"
-        xmlns:properties="clr-namespace:YuLauncher.Properties"
-        xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
-        Title="GameWindow" Height="{Binding Source={x:Static properties:Settings.Default},Path=Window_H}" Width="{Binding Source={x:Static properties:Settings.Default},Path=Window_W}" WindowStartupLocation="CenterScreen" ResizeMode="CanMinimize" WindowStyle="None">
+﻿<ui:FluentWindow x:Name="GameWindow1" x:Class="YuLauncher.Game.Window.GameWindow"
+                 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+                 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                 xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+                 xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+                 xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
+                 xmlns:local="clr-namespace:YuLauncher.Game.Window"
+                 mc:Ignorable="d"
+                 xmlns:properties="clr-namespace:YuLauncher.Properties"
+                 xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
+                 MinWidth="800" MinHeight="400"
+                 xmlns:lex="http://wpflocalizeextension.codeplex.com"
+                 lex:LocalizeDictionary.DesignCulture="ja-JP"
+                 lex:ResxLocalizationProvider.DefaultAssembly="YuLauncher"
+                 Closing="GameWindow_OnClosing"
+                 SizeChanged="GameWindow_OnSizeChanged"
+                 Title="GameWindow" WindowStartupLocation="CenterScreen">
 
-
-    <DockPanel x:Name="gamedock" Height="{Binding Source={x:Static properties:Settings.Default},Path=Window_H}" Width="{Binding Source={x:Static properties:Settings.Default},Path=Window_W}">
-        <Menu DockPanel.Dock="Top">
-            <MenuItem Header="機能">
-                <MenuItem Header="Wiki"/>
-            </MenuItem>
-            <MenuItem Header="アプリケーション">
-                <MenuItem Header="設定"/>
-            </MenuItem>
-        </Menu>
-        
-        <wv2:WebView2 Name="webView"
-        />
-        </DockPanel>
-    
-</Window>
+<Grid>
+    <DockPanel x:Name="gamedock">
+        <Grid DockPanel.Dock="Top">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <Menu PreviewMouseLeftButtonDown="Menu_PreviewMouseLeftButtonDown" Grid.Column="0">
+                <MenuItem Header="機能">
+                    <MenuItem Header="Wiki"/>
+                </MenuItem>
+                <MenuItem Header="アプリケーション">
+                    <MenuItem Header="設定"/>
+                </MenuItem>
+            </Menu>
+            <StackPanel Grid.Column="1" Orientation="Horizontal">
+            <ToggleButton Grid.Column="1" x:Name="WindowStateBtn" Checked="WindowStateBtn_OnChecked" Unchecked="WindowStateBtn_OnUnchecked" IsChecked="False">
+                <ui:FontIcon x:Name="WindowStateIcon" FontFamily="Segoe Fluent Icons" FontSize="20"/>
+            </ToggleButton>
+            <ui:Button x:Name="ExitBtn" Grid.Column="1" Click="ExitBtn_OnClick">
+                <ui:FontIcon FontFamily="Segoe Fluent Icons" Glyph="&#xf78a;" FontSize="20"/>
+            </ui:Button>
+            </StackPanel>
+        </Grid>
+        <wv2:WebView2 Name="webView"/>
+    </DockPanel>
+    </Grid>
+</ui:FluentWindow>
