ウィンドウの利便性向上(1) + htmlオフライン保存機能追加
(1) = ウィンドウ全体がドラッグ可能だったのを上のドックだけに改良
Issue50(Windowでドラッグを使用してウィンドウサイズを最大化するとドラッグで戻せなくなるバグ)に対応

--- a/YuLauncher/Core/Window/Pages/CreateGameDialog.xaml
+++ b/YuLauncher/Core/Window/Pages/CreateGameDialog.xaml
@@ -31,6 +31,7 @@
                     <ComboBoxItem x:Name="GenreApplicationComboBoxItem" Content="{lex:Loc GenreApplication}"/>
                     <ComboBoxItem x:Name="GenreWebSiteComboBoxItem" Content="{lex:Loc GenreWebsite}"/>
                     <ComboBoxItem x:Name="GenreWebGameComboBoxItem" Content="{lex:Loc GenreWebGame}"/>
+                    <ComboBoxItem x:Name="GenreWebSaverComboBoxItem" Content="{lex:Loc GenreWebSaver}"/>
                 </ComboBox>
                 <Label x:Name="GenreLabel" VerticalAlignment="Center" Content="{lex:Loc PleaseSelectGenre}" Foreground="Yellow"/>
             </StackPanel>
