--- a/YuLauncher/Core/WebSaverWindow/WebSaverWindow.xaml
+++ b/YuLauncher/Core/WebSaverWindow/WebSaverWindow.xaml
@@ -1,10 +1,10 @@
-﻿<ui:FluentWindow x:Name="GameWindow1" x:Class="YuLauncher.Game.Window.GameWindow"
+﻿<ui:FluentWindow x:Class="YuLauncher.Core.WebSaverWindow.WebSaverWindow"
                  xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                  xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                  xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
                  xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
                  xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
-                 xmlns:local="clr-namespace:YuLauncher.Game.Window"
+                 xmlns:local="clr-namespace:YuLauncher.Core.WebSaverWindow"
                  mc:Ignorable="d"
                  xmlns:properties="clr-namespace:YuLauncher.Properties"
                  xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf"
@@ -14,7 +14,7 @@
                  lex:ResxLocalizationProvider.DefaultAssembly="YuLauncher"
                  Closing="GameWindow_OnClosing"
                  SizeChanged="GameWindow_OnSizeChanged"
-                 Title="GameWindow" WindowStartupLocation="CenterScreen">
+                 Title="WebSaver" WindowStartupLocation="CenterScreen">
 
 <Grid>
     <DockPanel x:Name="gamedock">
@@ -24,9 +24,6 @@
                 <ColumnDefinition Width="Auto"/>
             </Grid.ColumnDefinitions>
             <Menu PreviewMouseLeftButtonDown="Menu_PreviewMouseLeftButtonDown" Grid.Column="0">
-                <MenuItem Header="機能">
-                    <MenuItem Header="Wiki"/>
-                </MenuItem>
                 <MenuItem Header="アプリケーション">
                     <MenuItem Header="設定"/>
                 </MenuItem>
