--- a/YuLauncher/Core/Window/MainWindow.xaml
+++ b/YuLauncher/Core/Window/MainWindow.xaml
@@ -22,7 +22,7 @@
             <RowDefinition Height="40"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-            <Grid Grid.Row="0"  x:Name="Grid">
+            <Grid Grid.Row="0"  x:Name="Grid" MouseMove="Grid_OnMouseMove">
                 <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                         <ui:Button x:Name="BackBtn" Click="BackBtn_OnClick">
                             <ui:FontIcon FontFamily="Segoe Fluent Icons" Glyph="&#xf0b0;" FontSize="20"/>
