--- a/YuLauncher/Core/Window/Pages/XamlCreateGameDialogInterface/WebSaver.xaml
+++ b/YuLauncher/Core/Window/Pages/XamlCreateGameDialogInterface/WebSaver.xaml
@@ -1,4 +1,4 @@
-﻿<local:DialogInterface x:Class="YuLauncher.Core.Window.Pages.XamlCreateGameDialogInterface.WebGame"
+﻿<local:DialogInterface x:Class="YuLauncher.Core.Window.Pages.XamlCreateGameDialogInterface.WebSaver"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
@@ -16,12 +16,13 @@
                 <ui:TextBlock x:Name="NameTextBlock" Text="{lex:Loc SimpleName}" VerticalAlignment="Center"/>
                 <ui:TextBox x:Name="NameBox" Text="" VerticalAlignment="Center"/>
             </StackPanel>
-        <ScrollViewer>
-            <StackPanel Orientation="Horizontal">
-                <ui:TextBlock x:Name="UrlTextBlock" Text="{lex:Loc SimpleAddress}" VerticalAlignment="Center"/>
-                <ui:TextBox x:Name="UrlBox" Text="" VerticalAlignment="Center"/>
-            </StackPanel>
-        </ScrollViewer>
+            <ScrollViewer>
+                <StackPanel Orientation="Horizontal">
+                    <ui:TextBlock x:Name="UrlTextBlock" Text="{lex:Loc SimpleAddress}" VerticalAlignment="Center"/>
+                    <ui:TextBox x:Name="UrlBox" Text="" VerticalAlignment="Center"/>
+                </StackPanel>
+            </ScrollViewer>
+            <ui:ToggleSwitch x:Name="WebviewSwitch" Content="{lex:Loc SimpleUseWebview}" Initialized="FrameworkElement_OnInitialized"/>
         </StackPanel>
         <ui:Button x:Name="SaveButton" Content="{lex:Loc SimpleSave}" Click="SaveButton_OnClick" VerticalAlignment="Bottom" HorizontalAlignment="Right"/>
     </Grid>
