--- a/YuLauncher/Core/Window/SettingWindow.xaml
+++ b/YuLauncher/Core/Window/SettingWindow.xaml
@@ -22,7 +22,10 @@
         </Grid.RowDefinitions>
         <Grid x:Name="Grid" MouseMove="Grid_OnMouseMove">
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
-            <ToggleButton x:Name="WindowStateBtn" VerticalAlignment="Center" Checked="WindowStateBtn_OnChecked" Unchecked="WindowStateBtn_OnUnchecked" IsChecked="False">
+                <ui:Button x:Name="MinimizeBtn" Click="MinimizeBtn_OnClick">
+                    <ui:FontIcon FontFamily="Segoe Fluent Icons" Glyph="&#xe921;" FontSize="20"/>
+                </ui:Button>
+                <ToggleButton x:Name="WindowStateBtn" VerticalAlignment="Center" Checked="WindowStateBtn_OnChecked" Unchecked="WindowStateBtn_OnUnchecked" IsChecked="False">
                 <ui:FontIcon x:Name="WindowStateIcon" FontFamily="Segoe Fluent Icons" FontSize="20"/>
             </ToggleButton>
             <ui:Button x:Name="ExitBtn" Click="ExitBtn_OnClick">
