--- a/YuLauncher/Core/Window/Pages/XamlCreateGameDialogInterface/Application.xaml
+++ b/YuLauncher/Core/Window/Pages/XamlCreateGameDialogInterface/Application.xaml
@@ -22,6 +22,9 @@
                 <ui:TextBox x:Name="ExePathNameBox" Text="" VerticalAlignment="Center"/>
             </StackPanel>
             </ScrollViewer>
+            <StackPanel Orientation="Horizontal">
+                <RadioButton x:Name="ApplicationLogButton" Content="{lex:Loc AppLogButton}" Initialized="ApplicationLog_OnInitialized"/>
+            </StackPanel>
         </StackPanel>
         <ui:Button x:Name="SaveButton" Content="{lex:Loc SimpleSave}" Click="SaveButton_OnClick" VerticalAlignment="Bottom" HorizontalAlignment="Right"/>
     </Grid>
