--- a/YuLauncher/Core/Window/Pages/GameList.xaml
+++ b/YuLauncher/Core/Window/Pages/GameList.xaml
@@ -23,34 +23,11 @@
                <ComboBoxItem x:Name="GenreWebsiteComboBoxItem" Content="{lex:Loc GenreWebsiteExtension}"/>
             </ComboBox>
            </StackPanel>
-           <ScrollViewer>
            
-               <Grid>
-                   <Grid.RowDefinitions>
-                       <RowDefinition Height="*"/>
-                   </Grid.RowDefinitions>
-                   <Grid.ColumnDefinitions>
-                       <ColumnDefinition Width="10*"/>
-                       <ColumnDefinition Width="80*"/>
-                       <ColumnDefinition Width="10*"/>
-                   </Grid.ColumnDefinitions>
-                    
-                   <Grid Grid.Column="0" Grid.Row="0">
-                       <StackPanel x:Name="IconPanel">
-                       </StackPanel>
-                   </Grid>
-                    
-                   <Grid Grid.Column="1" Grid.Row="0">
-                       <StackPanel  x:Name="Panel">
-                       </StackPanel>
-                   </Grid>
-                   <Grid Grid.Column="2" Grid.Row="0">
-                       <StackPanel  x:Name="ExtensionLabel">
-                       </StackPanel>
-                   </Grid>
-               </Grid>    
-           </ScrollViewer>
-       </StackPanel>
-       
+           <ScrollViewer x:Name="Viewer">
+               <WrapPanel  x:Name="Panel" Orientation="Horizontal">
+               </WrapPanel>
+              </ScrollViewer>
+               </StackPanel>
     </Grid>
 </Page>
